[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-track-analyzer"
version = "0.1.0"
description = "Tropical cyclone track analyzer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.9"
authors = [
    {name = "Katy Marlowe", email = "kama4250@colorado.edu"},
]
dependencies = [
    "numpy >= 1.22",
    "matplotlib >= 3.5",
    "pandas",
    "cartopy"
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
run-tc-track-analyzer = "tc_track_analyzer.run_:main"